Fix overflow X issue

--- a/styles/style-challenge-store.css
+++ b/styles/style-challenge-store.css
@@ -12,6 +12,10 @@ HTML MONTSERRAT
     padding: 0;
 }
 
+.box-sizing-border{
+    box-sizing: border-box;
+}
+
 .column{
     display: flex;
     flex-direction: column;
@@ -90,6 +94,10 @@ HTML MONTSERRAT
     width: 100vw;
 }
 
+.width-100{
+    width: 100%;
+}
+
 .font-800{
     font-weight: 800;
 }
@@ -135,7 +143,7 @@ HTML MONTSERRAT
 }
 
 #main{
-    width: 100vw;
+    width: 100%;
 }
 
 
@@ -174,7 +182,7 @@ a:active{
 header{
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     border: 1px solid black;
 }
 
@@ -225,7 +233,7 @@ header{
 
 #navWrapper{
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 70px;
     
 }
@@ -289,7 +297,7 @@ h4{
 
 #title{
     padding: 2rem 0;
-    width: 100vw;
+    width: 100%;
 }
 
 #titleImg{
@@ -454,7 +462,7 @@ h5{
 }
 
 #promoAnchor{
-    width: 100vw;
+    width: 100%;
     height: 120px;
     font-size: 2rem;
 }
@@ -524,7 +532,7 @@ ul{
 }
 
 #footer{
-    width: 100vw;
+    width: 100%;
     min-height: 400px;
     border: 1px solid #000F;
 }
